--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 REACT_APP_NETWORK=
 REACT_APP_API_KEY=
-REACT_APP_API_URL=http://localhost
+REACT_APP_API_URL=http://103.35.190.36
 # REACT_APP_API_URL=http://192.168.118.109
 REACT_APP_API_PORT=8443
-REACT_APP_WEBSITE_URL=
+REACT_APP_WEBSITE_URL=http://103.35.190.36:3000
 REACT_APP_FEE_WALLET=
