--- a/package.json
+++ b/package.json
@@ -21,7 +21,10 @@
     "bitecs": "^0.3.38",
     "env-cmd": "^10.1.0",
     "eslint-config-prettier": "^8.8.0",
+    "howler": "^2.2.4",
     "phaser": "^3.60.0",
+    "phaser-ce": "^2.20.0",
+    "phaser3-rex-plugins": "^1.60.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-jazzicon": "^1.0.4",
