--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
     "react-redux": "^8.1.1",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "react-spinner": "^0.2.7",
+    "react-spinners": "^0.13.8",
     "redux-mock-store": "^1.5.4",
     "regenerator-runtime": "^0.13.11",
     "sass": "^1.53.0",
