--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-scripts": "5.0.1",
     "react-spinner": "^0.2.7",
     "react-spinners": "^0.13.8",
+    "reactstrap": "^9.2.1",
     "redux-mock-store": "^1.5.4",
     "redux-thunk": "^2.4.2",
     "regenerator-runtime": "^0.13.11",
