add dragon town modal

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@ethersproject/providers": "^5.7.2",
     "@mui/icons-material": "^5.8.4",
     "@mui/material": "^5.8.4",
+    "@nextui-org/react": "^2.2.9",
     "@reduxjs/toolkit": "^1.9.5",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -19,6 +20,7 @@
     "@walletconnect/web3-provider": "^1.7.8",
     "axios": "^0.27.2",
     "bitecs": "^0.3.38",
+    "browser": "^0.2.6",
     "env-cmd": "^10.1.0",
     "eslint-config-prettier": "^8.8.0",
     "howler": "^2.2.4",
