--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/react": "^18.2.17",
     "@types/react-dom": "^18.2.7",
     "@walletconnect/web3-provider": "^1.7.8",
+    "antd": "^5.11.5",
     "axios": "^0.27.2",
     "bitecs": "^0.3.38",
     "browser": "^0.2.6",
